--- a/MobilePervasive.oneMile/app/src/main/AndroidManifest.xml
+++ b/MobilePervasive.oneMile/app/src/main/AndroidManifest.xml
@@ -55,6 +55,8 @@
         </activity>
         <activity android:name=".PostNewActivity"
             android:launchMode="singleTask"></activity>
+        <activity android:name=".RefreshActivity"
+            android:launchMode="singleInstance"></activity>
 
     </application>
 
