--- a/MobilePervasive.oneMile/app/build.gradle
+++ b/MobilePervasive.oneMile/app/build.gradle
@@ -23,5 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.getbase:floatingactionbutton:1.9.0'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile project(':volley')
 }
