add button features, more beautiful than ever

--- a/MobilePervasive.oneMile/app/src/main/AndroidManifest.xml
+++ b/MobilePervasive.oneMile/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".PostNewActivity"
+            android:label="What's up?"
             android:launchMode="singleTask"></activity>
 
     </application>
